# EDFS

./: .gitignore  Project_Milestone_Kris_v1d.ipynb  README.md  pyproject.toml
notebooks/: 2025_12_05_exp1_speech_only.ipynb  2025_12_05_exp2_speech_aug_gen.ipynb  2025_12_05_exp3_speech_song.ipynb  Exp1_Speech_v5e.ipynb  Exp1_Speech_v5e_fixed.ipynb  Exp1_Speech_v5f.ipynb  Exp1_Speech_v5g.ipynb  Exp2_Speech_AugGen_v5e.ipynb  Exp2_Speech_AugGen_v5g.ipynb  Exp3_SpeechSong_v5e.ipynb  Exp3_SpeechSong_v5g.ipynb  Final_Project_Mileston_Draft_NithyaEDA.ipynb  Project_Milestone_Kris_WIP.ipynb  eda_BRM.ipynb  eda_combined_final.ipynb  eda_pratheek.ipynb
notebooks/individual/: eda_BRM.ipynb
notebooks/individual/models/: final_models_kris_v1d.ipynb  final_models_nithya.ipynb  final_models_pratheek.ipynb
scripts/: __init__.py  download_ravdess.py
tests/: __init__.py  test_download_ravdess.py
